fix chat scroll issue on safari

--- a/react/features/chat/components/web/ChatMessageGroup.module.scss
+++ b/react/features/chat/components/web/ChatMessageGroup.module.scss
@@ -1,4 +1,4 @@
 .chatMessageGroup {
-    display: flex;
+    display: block;
     flex-direction: column;
 }
